# wafer

./: .gitignore  Cargo.toml
spec/: WAFFLE_GO.md  WAFFLE_SPEC.md
src/: block.rs  context.rs  executor.rs  helpers.rs  lib.rs  runtime.rs  types.rs
src/bridge/: http.rs
src/schema/: mod.rs
src/services/: database_sqlite.rs  mod.rs
src/waferconfig/: bootstrap.rs
src/wasm/: bindings.rs  host.rs  loader.rs  memory.rs  mod.rs
tests/: integration_test.rs
