[package]
name = "wafer-run"
version = "0.1.0"
edition = "2021"
description = "WAFER runtime — WebAssembly Architecture for Flow Execution & Routing"
license = "MIT"
repository = "https://github.com/wafer-run/wafer"

[features]
default = ["sqlite", "http", "wasm"]
sqlite = ["dep:rusqlite"]
http = ["dep:axum", "dep:tower", "dep:tower-http", "dep:hyper"]
wasm = ["dep:wasmtime"]
crypto = ["dep:argon2", "dep:jsonwebtoken"]
storage-local = []
# storage-s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
network = ["dep:reqwest"]
full = ["sqlite", "http", "wasm", "crypto", "storage-local", "network"]

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"

# HTTP bridge (axum)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
hyper = { version = "1", optional = true }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# WASM (Wasmtime)
wasmtime = { version = "29", optional = true }

# Crypto
argon2 = { version = "0.5", optional = true }
jsonwebtoken = { version = "9", optional = true }

# Storage (S3) — requires network to resolve; uncomment when publishing
# aws-sdk-s3 = { version = "1", optional = true }
# aws-config = { version = "1", optional = true }

# Network
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
